helm/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  labels:
    app: prometheus-ingress
  name: prometheus-ingress
  namespace: prometheus
spec:
  rules:
  - host: prometheus.qoocar.com
    http:
      paths:
      - backend:
          serviceName: prometheus-prometheus-server
          servicePort: 9090
        path: /
